Changed working slightly on homepage.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ the case in applications such as radio interferometry and medical imaging. </p>
 <ul>
 <li>Fast transformations between regular to regular, regular to irregular, 
 irregular to regular, and irregular to irregular spaces.</li>
-<li>Efficiently use with Hermitian symmetric data. One can store only half of 
-the data, and the symmetric data are implied.</li>
+<li>Efficient handling of Hermitian symmetric data. Store only half of 
+the data, and the symmetric data points are implied.</li>
 <li>Handles mixtures of FFT and IFFT along different axes for multi-dimensional
 data.</li>
 <li>Handles phase shifting of data for arbitrary axis definitions whether 
